# inventory_crud

./: README.md  docker-compose.yml  pyproject.toml
src/backend/: Dockerfile  main.py
src/backend/controller/: crud.py  routes.py
src/backend/models/: database.py  models.py
src/backend/schemas/: schema.py
src/controller/: crud.py  routes.py
src/frontend/: Dockerfile  app.py
src/model/: database.py
src/models/: database.py  models.py
src/schemas/: schema.py
