[tool.poetry]
name = "inventory-crud"
version = "0.1.0"
description = ""
authors = ["Pablo Mendes Faria <pablomendesfaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
