[tool.poetry]
name = "inventory-crud"
version = "0.1.0"
description = ""
authors = ["Pablo Mendes Faria <pablomendesfaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "blue . && isort ."

[tool.blue]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120